--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@playwright/test": "^1.55.0",
     "@tailwindcss/vite": "^4.1.13",
+    "lucide-react": "^0.543.0",
     "motion": "^12.23.12",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
